feat: 🎸 增加提醒消息以及模态弹窗

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
 			"parser": "babel-eslint"
 		},
 		"rules": {
+			"no-unused-vars": "warn",
 			"vue/no-unused-vars": "warn",
-			"no-unused-vars": "warn"
+			"vue/require-v-for-key": "warn"
 		}
 	},
 	"browserslist": [
