chore: 🤖 自动部署，增加cname

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,13 +4,14 @@ jobs:
     deploy:
         runs-on: ubuntu-18.04
         steps:
-          - uses: actions/checkout@v2
-          - run: |
+            - uses: actions/checkout@v2
+            - run: |
                   yarn
                   yarn build
-          - name: Deploy
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-              github_token: ${{ secrets.GITHUB_TOKEN }}
-              publish_dir: ./dist
-              publish_branch: gh-pages  # deploying branch
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./dist
+                  publish_branch: gh-pages # deploying branch
+                  CNAME: start-pages.zkl2333.com/
