--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,8 @@
 name: gh-pages
-on: [push]
+on:
+    push:
+        branches:
+            - master
 jobs:
     deploy:
         runs-on: ubuntu-18.04
