--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,3 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
+npmRegistryServer: "https://registry.npm.taobao.org/"
+
+yarnPath: .yarn/releases/yarn-berry.cjs
