--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "一个简单的导航页",
 	"main": "main.js",
 	"dependencies": {
+		"bulma": "^0.9.1",
 		"core-js": "^3.6.4",
 		"leancloud-storage": "^4.10.0",
 		"regenerator-runtime": "^0.13.7",
@@ -12,6 +13,7 @@
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
 		"@vue/cli-plugin-eslint": "~4.5.0",
+		"@vue/cli-plugin-router": "~4.5.0",
 		"@vue/cli-service": "~4.5.0",
 		"@vue/eslint-config-airbnb": "^5.0.2",
 		"babel-eslint": "^10.1.0",
