--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"core-js": "^3.6.4",
 		"leancloud-storage": "^4.10.0",
 		"regenerator-runtime": "^0.13.7",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vue-router": "^3.2.0",
+		"vuex": "^3.6.0"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
