--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,6 +11,7 @@ jobs:
             - run: |
                   yarn
                   yarn build
+                  cp ./dist/index.html ./dist/404.html
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
